log

Thu 17 Aug 2023 10:44:58 PM UTC: 
 exercises.c | 153 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 144 insertions(+), 9 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:69:10: error: function returns address of local variable [-Werror=return-local-addr]
   69 |   return listaPar;
      |          ^~~~~~~~
exercises.c: In function ‘checkSorted’:
exercises.c:149:1: error: control reaches end of non-void function [-Werror=return-type]
  149 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6c41012
Thu 17 Aug 2023 10:47:39 PM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:146:1: error: control reaches end of non-void function [-Werror=return-type]
  146 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
31a5f54
Thu 17 Aug 2023 10:48:22 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:148:1: error: control reaches end of non-void function [-Werror=return-type]
  148 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
07e0a50
Thu 17 Aug 2023 10:48:54 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
1685df6
Thu 17 Aug 2023 10:51:37 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|4
total_score: 30/70
cca063d
Thu 17 Aug 2023 10:58:30 PM UTC: 
 exercises.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
 tests:  0|3
total_score: 40/70
8379e58
Thu 17 Aug 2023 11:03:25 PM UTC: 
 exercises.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  0|3
total_score: 40/70
1acdaca
Thu 17 Aug 2023 11:05:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
01962c7
Thu 17 Aug 2023 11:09:22 PM UTC: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|3
total_score: 40/70
93852b6
Thu 17 Aug 2023 11:17:12 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|2
total_score: 50/70
a92431b
Thu 17 Aug 2023 11:23:25 PM UTC: 
 exercises.c | 21 +++++++++++++++++----
 1 file changed, 17 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:116:19: error: ‘aux’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  116 |       result[z+1] = aux;
      |       ~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
d511ef7
Thu 17 Aug 2023 11:23:59 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|2
total_score: 50/70
50d60ff
Thu 17 Aug 2023 11:29:14 PM UTC: 
 exercises.c | 19 +------------------
 1 file changed, 1 insertion(+), 18 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:82:13: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   82 |   int i,k,j,aux;
      |             ^~~
cc1: all warnings being treated as errors
Compilation failed
71aa016
Thu 17 Aug 2023 11:29:26 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|2
total_score: 50/70
86cf49d
Thu 17 Aug 2023 11:34:38 PM UTC: 
 exercises.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  0|2
total_score: 50/70
9a235e1
Thu 17 Aug 2023 11:35:21 PM UTC: 
 exercises.c | 12 ++----------
 1 file changed, 2 insertions(+), 10 deletions(-)
 tests:  0|2
total_score: 50/70
bbb8846
Thu 17 Aug 2023 11:40:04 PM UTC: 
 exercises.c | 24 +++++++++++-------------
 1 file changed, 11 insertions(+), 13 deletions(-)
 tests:  0|0
4d2da06
Thu 17 Aug 2023 11:41:34 PM UTC: 
 exercises.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  0|2
total_score: 50/70
6d2ff40
Thu 17 Aug 2023 11:43:00 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:140:1: error: control reaches end of non-void function [-Werror=return-type]
  140 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
542b234
Thu 17 Aug 2023 11:45:45 PM UTC: 
 exercises.c | 13 +++++--------
 1 file changed, 5 insertions(+), 8 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:126:31: error: suggest parentheses around comparison in operand of ‘==’ [-Werror=parentheses]
  126 |       if(ordenASC == ordenDES > 0)
      |                      ~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
70ab5dd
Thu 17 Aug 2023 11:46:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
c757b4f
Thu 17 Aug 2023 11:48:09 PM UTC: 
 exercises.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  0|2
total_score: 50/70
7f5ee99
Thu 17 Aug 2023 11:49:11 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|1
total_score: 60/70
b0daa6f
Thu 17 Aug 2023 11:50:06 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|1
total_score: 60/70
8323664
Thu 17 Aug 2023 11:51:15 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|1
total_score: 60/70
8f0fcbe
Thu 17 Aug 2023 11:52:35 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
fcf36d8
Thu 17 Aug 2023 11:53:23 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|1
total_score: 60/70
d4954c0
Thu 17 Aug 2023 11:58:47 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|1
total_score: 60/70
431b464
